--- a/blog.html
+++ b/blog.html
@@ -422,93 +422,89 @@
     <!--================Blog Area =================-->
 
     <!--::footer_part start::-->
-    <footer class="footer_part black">
-        <div class="footer_top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6 col-lg-3">
-                        <div class="single_footer_part">
-                            <a href="index.html" class="footer_logo_iner"> <img src="img/logo.png" alt="#"> </a>
-                            <p>Heaven fruitful doesn't over lesser days appear creeping seasons so behold bearing
-                                days
-                                open
-                            </p>
+  <footer class="footer_part">
+            <div class="footer_top">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-6 col-lg-3">
+                            <div class="single_footer_part">
+                                <a href="index.html" class="footer_logo_iner"> <img src="pictures/munno word.png" alt="#"> </a>
+                                <p>Where games comes to life! Keep creating!
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-3">
-                        <div class="single_footer_part">
-                            <h4>Contact Info</h4>
-                            <p>Address : Your address goes
-                                here, your demo address.
-                                Bangladesh.</p>
-                            <p>Phone : +8880 44338899</p>
-                            <p>Email : info@colorlib.com</p>
+                        <div class="col-sm-6 col-lg-3">
+                            <div class="single_footer_part">
+                                <h4>Contact</h4>
+                                <p>Email : munnuo@hotmail.com</p>
+                                <p>Phone : 312-722-0338</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-3">
-                        <div class="single_footer_part">
-                            <h4>Important Link</h4>
-                            <ul class="list-unstyled">
-                                <li><a href=""> WHMCS-bridge</a></li>
-                                <li><a href="">Search Domain</a></li>
-                                <li><a href="">My Account</a></li>
-                                <li><a href="">Shopping Cart</a></li>
-                                <li><a href="">Our Shop</a></li>
-                            </ul>
+                        <div class="col-sm-6 col-lg-3">
+                            <div class="single_footer_part">
+                                <h4>Navigate</h4>
+                                <ul class="list-unstyled">
+                                    <li><a href="fighter.html">Games</a></li>
+                                    <li><a href="">Careers</a></li>
+                                    <li><a href="">About</a></li>
+                                    <li><a href="terms&conditions.html">Terms & Conditions</a></li>
+                                    <li><a href="privacypolicy.html">Privacy Policy</a></li>
+                                    <li><a href="">Refund Policy</a></li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-3">
-                        <div class="single_footer_part">
-                            <h4>Newsletter</h4>
-                            <p>Heaven fruitful doesn't over lesser in days. Appear creeping seasons deve behold
-                                bearing
-                                days
-                                open
-                            </p>
-                            <div id="mc_embed_signup">
-                                <form target="_blank"
-                                    action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                                    method="get" class="subscribe_form relative mail_part">
-                                    <input type="email" name="email" id="newsletter-form-email"
-                                        placeholder="Email Address" class="placeholder hide-on-focus"
-                                        onfocus="this.placeholder = ''" onblur="this.placeholder = ' Email Address '">
-                                    <button type="submit" name="submit" id="newsletter-submit"
-                                        class="email_icon newsletter-submit button-contactForm"><i
-                                            class="far fa-paper-plane"></i></button>
-                                    <div class="mt-10 info"></div>
-                                </form>
+                        <div class="col-sm-6 col-lg-3">
+                            <div class="single_footer_part">
+                                <h4>Newsletter</h4>
+                                <p>If you want to keep track of all games or future projects being developed
+                                    by Munnuo Games Studio, subscribe to our newsletter by entering your email!
+                                </p>
+                                <div id="mc_embed_signup">
+                                    <form target="_blank"
+                                        action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
+                                        method="get" class="subscribe_form relative mail_part">
+                                        <input type="email" name="email" id="newsletter-form-email"
+                                            placeholder="Email Address" class="placeholder hide-on-focus"
+                                            onfocus="this.placeholder = ''"
+                                            onblur="this.placeholder = ' Email Address '">
+                                        <button type="submit" name="submit" id="newsletter-submit"
+                                            class="email_icon newsletter-submit button-contactForm"><i
+                                                class="far fa-paper-plane"></i></button>
+                                        <div class="mt-10 info"></div>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="copygight_text">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-8">
-                        <div class="copyright_text">
-                            <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
+            <div class="copygight_text">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-lg-8">
+                            <div class="copyright_text">
+                                <P>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is powered by Munnuo Games Studio
+</P>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="footer_icon social_icon">
-                            <ul class="list-unstyled">
-                                <li><a href="#" class="single_social_icon"><i class="fab fa-facebook-f"></i></a>
-                                </li>
-                                <li><a href="#" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#" class="single_social_icon"><i class="fas fa-globe"></i></a></li>
-                                <li><a href="#" class="single_social_icon"><i class="fab fa-behance"></i></a></li>
-                            </ul>
+                        <div class="col-lg-4">
+                            <div class="footer_icon social_icon">
+                                <ul class="list-unstyled">
+                                    <li><a href="#" class="single_social_icon"><i class="fab fa-facebook-f"></i></a>
+                                    </li>
+                                    <li><a href="#" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
+                                    <li><a href="#" class="single_social_icon"><i class="fas fa-globe"></i></a></li>
+                                    <li><a href="#" class="single_social_icon"><i class="fab fa-behance"></i></a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
     <!--::footer_part end::-->
+
     <!-- jquery plugins here-->
     <script src="js/jquery-1.12.1.min.js"></script>
     <!-- popper js -->
