--- a/fighter.html
+++ b/fighter.html
@@ -99,25 +99,19 @@
                     <div class="col-lg-12">
                         <div class="client_logo_slider owl-carousel d-flex justify-content-between">
                             <div class="single_client_logo">
-                                <img src="img/client_logo/client_logo_1.png" alt="">
+                                <h3 style="color: black;">Chuck</h3>
                             </div>
                             <div class="single_client_logo">
-                                <img src="img/client_logo/client_logo_2.png" alt="">
+                                <h3 style="color: black;">Kiambi</h3>
                             </div>
                             <div class="single_client_logo">
-                                <img src="img/client_logo/client_logo_3.png" alt="">
+                                <h3 style="color: black;">Delora</h3>
                             </div>
                             <div class="single_client_logo">
-                                <img src="img/client_logo/client_logo_4.png" alt="">
+                                <h3 style="color: black;">Myiesha</h3>
                             </div>
                             <div class="single_client_logo">
-                                <img src="img/client_logo/client_logo_5.png" alt="">
-                            </div>
-                            <div class="single_client_logo">
-                                <img src="img/client_logo/client_logo_1.png" alt="">
-                            </div>
-                            <div class="single_client_logo">
-                                <img src="img/client_logo/client_logo_2.png" alt="">
+                                <h3 style="color: black;">Thugger</h3>
                             </div>
                         </div>
                     </div>
@@ -266,21 +260,17 @@
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
                                 <h4>Contact</h4>
-                                <p>Email : contact@munnuo.com</p>
+                                <p>Email : munnuo@hotmail.com</p>
                                 <p>Phone : 312-722-0338</p>
-                                <p>Address : 4519 S Forrestville Ave
-                                    Chicago, IL 60653
-                                </p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
                                 <h4>Navigate</h4>
                                 <ul class="list-unstyled">
-                                    <li><a href="">Games</a></li>
+                                    <li><a href="fighter.html">Games</a></li>
                                     <li><a href="">Careers</a></li>
                                     <li><a href="">About</a></li>
-                                    <li><a href="">Shopping Cart</a></li>
                                     <li><a href="terms&conditions.html">Terms & Conditions</a></li>
                                     <li><a href="privacypolicy.html">Privacy Policy</a></li>
                                     <li><a href="">Refund Policy</a></li>
