--- a/team.html
+++ b/team.html
@@ -149,7 +149,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="section_tittle text-center">
-                            <h2>JuJu</h2>
+                            <h2>JuJu Beatz</h2>
                             <h3>Audio Engineer | Music Producer</h3>
                         </div>
                     </div>
@@ -170,7 +170,7 @@
         <!--::about_us part end::-->
 
         <!--::footer_part start::-->
-                <footer class="footer_part">
+        <footer class="footer_part">
             <div class="footer_top">
                 <div class="container">
                     <div class="row">
@@ -186,19 +186,15 @@
                                 <h4>Contact</h4>
                                 <p>Email : contact@munnuo.com</p>
                                 <p>Phone : 312-722-0338</p>
-                                <p>Address : 4519 S Forrestville Ave
-                                    Chicago, IL 60653
-                                </p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
                                 <h4>Navigate</h4>
                                 <ul class="list-unstyled">
-                                    <li><a href="">Games</a></li>
+                                    <li><a href="fighter.html">Games</a></li>
                                     <li><a href="">Careers</a></li>
                                     <li><a href="">About</a></li>
-                                    <li><a href="">Shopping Cart</a></li>
                                     <li><a href="terms&conditions.html">Terms & Conditions</a></li>
                                     <li><a href="privacypolicy.html">Privacy Policy</a></li>
                                     <li><a href="">Refund Policy</a></li>
