--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -46,7 +46,7 @@
                   <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="fighter.html">fighter</a>
+                  <a class="nav-link" href="fighter.html">Games</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="team.html">team</a>
@@ -61,21 +61,12 @@
                     <a class="dropdown-item" href="single-blog.html">Single blog</a>
                   </div>
                 </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1" role="button"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    pages
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                    <a class="dropdown-item" href="elements.html">Elements</a>
-                  </div>
-                </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact</a>
                 </li>
               </ul>
             </div>
-            <a href="#" class="btn_1 d-none d-sm-block">Install Now</a>
+            <a href="#" class="btn_1 d-none d-sm-block">Play Now</a>
           </nav>
         </div>
       </div>
@@ -216,10 +207,9 @@
                             <div class="single_footer_part">
                                 <h4>Navigate</h4>
                                 <ul class="list-unstyled">
-                                    <li><a href="">Games</a></li>
+                                    <li><a href="fighter.html">Games</a></li>
                                     <li><a href="">Careers</a></li>
-                                    <li><a href="">About</a></li>
-                                    <li><a href="">Shopping Cart</a></li>
+                                    <li><a href="about.html">About</a></li>                                   
                                     <li><a href="terms&conditions.html">Terms & Conditions</a></li>
                                     <li><a href="privacypolicy.html">Privacy Policy</a></li>
                                     <li><a href="">Refund Policy</a></li>
