--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -196,11 +196,8 @@
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
                                 <h4>Contact</h4>
-                                <p>Email : contact@munnuo.com</p>
+                                <p>Email : munnuo@hotmail.com</p>
                                 <p>Phone : 312-722-0338</p>
-                                <p>Address : 4519 S Forrestville Ave
-                                    Chicago, IL 60653
-                                </p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-3">
