updated a few incorrect links on multiple pages

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -209,7 +209,7 @@
                                     <li><a href="about.html">About</a></li>                                   
                                     <li><a href="terms&conditions.html">Terms & Conditions</a></li>
                                     <li><a href="privacypolicy.html">Privacy Policy</a></li>
-                                    <li><a href="">Refund Policy</a></li>
+                                    <li><a href="refundpolicy.html">Refund Policy</a></li>
                                 </ul>
                             </div>
                         </div>
