modified pages layouts

--- a/fighter.html
+++ b/fighter.html
@@ -68,7 +68,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <a href="#" class="btn_1 d-none d-sm-block">Install Now</a>
+                            <a href="#" class="btn_1 d-none d-sm-block">Play Now</a>
                         </nav>
                     </div>
                 </div>
@@ -102,16 +102,22 @@
                                 <h3 style="color: black;">Chuck</h3>
                             </div>
                             <div class="single_client_logo">
+                                <h3 style="color: black;">Delora</h3>
+                            </div>
+                            <div class="single_client_logo">
                                 <h3 style="color: black;">Kiambi</h3>
                             </div>
                             <div class="single_client_logo">
-                                <h3 style="color: black;">Delora</h3>
+                                <h3 style="color: black;">Monique</h3>
                             </div>
                             <div class="single_client_logo">
                                 <h3 style="color: black;">Myiesha</h3>
                             </div>
                             <div class="single_client_logo">
                                 <h3 style="color: black;">Thugger</h3>
+                            </div>
+                            <div class="single_client_logo">
+                                <h3 style="color: black;">YN</h3>
                             </div>
                         </div>
                     </div>
@@ -270,10 +276,10 @@
                                 <ul class="list-unstyled">
                                     <li><a href="fighter.html">Games</a></li>
                                     <li><a href="">Careers</a></li>
-                                    <li><a href="">About</a></li>
+                                    <li><a href="about.html">About</a></li>
                                     <li><a href="terms&conditions.html">Terms & Conditions</a></li>
                                     <li><a href="privacypolicy.html">Privacy Policy</a></li>
-                                    <li><a href="">Refund Policy</a></li>
+                                    <li><a href="refundpolicy.html">Refund Policy</a></li>
                                 </ul>
                             </div>
                         </div>
