--- a/refundpolicy.html
+++ b/refundpolicy.html
@@ -81,7 +81,7 @@
         <div class="col-lg-12">
           <div class="breadcrumb_iner text-center">
             <div class="breadcrumb_iner_item">
-              <h2>About Us</h2>
+              <h2>Refund Policy</h2>
             </div>
           </div>
         </div>
@@ -94,11 +94,34 @@
   <section class="contact-section section_padding">
     <div class="container">
       <div class="d-none d-sm-block mb-5 pb-4">
-        <h2 style="text-align: center;">Designed by a Gamer, For Everyone</h2>
-        <h2 style="text-align: center;">---------</h2>
+        <h2>Returns</h2>
+        <br>
+        <h3>What’s your return policy?</h3>
+        <p> We don’t offer returns and exchanges, but if there’s something wrong with your order, please let
 
-        <p>MUNNUO and all its designs, logos, projects, softwares are designed by a family of engineers and artist.</p>
-        
+            us know by contacting us at support@munnuo.com
+        </p>
+        <br>
+        <h3>Do you offer refunds?</h3>
+        <p>Refunds are only offered to customers that receive the wrong items or damaged items. If any of
+
+            these apply, please contact us at support@munnuo.com with photos of wrong/damaged
+
+            items and we’ll sort that out for you.
+            Can I exchange an item for a different size/color?
+
+            At this time, we don't offer exchanges. If you’re unsure which size would fit better, check out our
+
+            sizing charts—we have one for every item listed on our store, in the product description section.
+
+            Though rare, it's possible that an item you ordered was mislabeled. If that’s the case, please let
+
+            us know at support@munnuo.com within a week after receiving your order. Include your
+
+            order number and photos of the mislabeled item, and we’ll send you a new one, or issue a
+
+            refund!
+        </p>
       </div>
     </div>
     </section>
