--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <a href="#" class="btn_1 d-none d-sm-block">Install Now</a>
+                            <a href="#" class="btn_1 d-none d-sm-block">Play Now</a>
                         </nav>
                     </div>
                 </div>
@@ -108,7 +108,13 @@
                                 <h3 style="color: black;">Chuck</h3>
                             </div>
                             <div class="single_client_logo">
+                                <h3 style="color: black;">Delora</h3>
+                            </div>
+                            <div class="single_client_logo">
                                 <h3 style="color: black;">Kiambi</h3>
+                            </div>
+                            <div class="single_client_logo">
+                                <h3 style="color: black;">Monique</h3>
                             </div>
                             <div class="single_client_logo">
                                 <h3 style="color: black;">Myiesha</h3>
