updated index file

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
                                 <h4>Contact</h4>
-                                <p>Email : munnuo@hotmail.com</p>
+                                <p>Email : contact@munnuo.com</p>
                                 <p>Phone : 312-722-0338</p>
                             </div>
                         </div>
