--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="section_tittle text-center">
-                            <h2>Project Streetz</h2>
+                            <h2>Da Streetz</h2>
                         </div>
                         <div class="row justify-content-center align-items-center h-100">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/9GPidK5yldQ?si=o8bMgYJy80ThPPVC&amp;start=76" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
