--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     </div>
                     <div class="col-md-7 col-lg-6 col-xl-5">
                         <div class="about_us_text">
-                            <h2>Learn more about the Universe of Moji</h2>
+                            <h2 style="text-align: center;">Learn more about the Universe of Moji</h2>
                             <p>There are three games that take place in the universe of Moji;
                                 Moji Karts (a mobile kart racing game), Moji World, and Da Streetz.
                             </p>
