--- a/blog.html
+++ b/blog.html
@@ -436,7 +436,7 @@
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
                                 <h4>Contact</h4>
-                                <p>Email : munnuo@hotmail.com</p>
+                                <p>Email : contact@munnuo.com</p>
                                 <p>Phone : 312-722-0338</p>
                             </div>
                         </div>
@@ -446,10 +446,10 @@
                                 <ul class="list-unstyled">
                                     <li><a href="fighter.html">Games</a></li>
                                     <li><a href="">Careers</a></li>
-                                    <li><a href="">About</a></li>
+                                    <li><a href="about.html">About</a></li>
                                     <li><a href="terms&conditions.html">Terms & Conditions</a></li>
                                     <li><a href="privacypolicy.html">Privacy Policy</a></li>
-                                    <li><a href="">Refund Policy</a></li>
+                                    <li><a href="refundpolicy.html">Refund Policy</a></li>
                                 </ul>
                             </div>
                         </div>
