--- a/team.html
+++ b/team.html
@@ -194,10 +194,10 @@
                                 <ul class="list-unstyled">
                                     <li><a href="fighter.html">Games</a></li>
                                     <li><a href="">Careers</a></li>
-                                    <li><a href="">About</a></li>
+                                    <li><a href="about.html">About</a></li>
                                     <li><a href="terms&conditions.html">Terms & Conditions</a></li>
                                     <li><a href="privacypolicy.html">Privacy Policy</a></li>
-                                    <li><a href="">Refund Policy</a></li>
+                                    <li><a href="refundpolicy.html">Refund Policy</a></li>
                                 </ul>
                             </div>
                         </div>
