--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     <div class="row">
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
-                                <a href="index.html" class="footer_logo_iner"> <img src="pictures/munno word.png" alt="#"> </a>
+                                <a href="index.html" class="footer_logo_iner" style="align-items: center;"> <img src="pictures/munno word.png" alt="#"> </a>
                                 <p>Where games comes to life! Keep creating!
                                 </p>
                             </div>
