--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
-                            <a class="navbar-brand" href="index.html"> <img src="pictures/munno word.png" alt="logo"> </a>
+                            <a class="navbar-brand" href="index.html" style="width: 20%;"> <img src="pictures/munno word.png" alt="logo"> </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                 aria-expanded="false" aria-label="Toggle navigation">
@@ -106,7 +106,9 @@
                                     Accompanied by his best friend Delora </p>
                                 <!--<a href="#" class="btn_1">Watch Trailer</a> -->
                                 <br>
-                                <iframe src="https://www.youtube.com/embed/79-2d2J89fg?si=KDjQ3no77aa7zhhh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <div style="align-items: center;">
+                                    <iframe src="https://www.youtube.com/embed/79-2d2J89fg?si=KDjQ3no77aa7zhhh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                </div>
                             </div>
                         </div>
                     </div>
