adjust video aspect on homepage

--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
                 <div class="row align-items-center justify-content-between">
                     <div class="col-md-5 col-lg-6 col-xl-6">
                         <div class="learning_img">
-                           <!-- <video width="600" height="573" controls>-->
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/NEBiz00GGeY?si=q3UUnlYHm5E90TI-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                           <!-- <video width="600" height="573" width="560" height="315"  controls>-->
+                            <iframe src="https://www.youtube.com/embed/NEBiz00GGeY?si=q3UUnlYHm5E90TI-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                             
                             <!--</video>-->
                             <!--<img src="img/about_img.png" alt="">-->
