--- a/team.html
+++ b/team.html
@@ -187,7 +187,7 @@
         <!--::about_us part end::-->
 
         <!--::footer_part start::-->
-        <footer class="footer_part">
+        <footer class="footer_part"  style="padding-left: 15%; padding-right: 15%;">
             <div class="footer_top">
                 <div class="container">
                     <div class="row">
