--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 
 <body>
   <!--::header part start::-->
-  <header class="main_menu single_page_menu">
+  <header class="main_menu single_page_menu" style="padding-left: 15%; padding-right: 15%;">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-12">
