changes to team page

--- a/team.html
+++ b/team.html
@@ -46,7 +46,7 @@
 <body>
     <div class="body_bg">
         <!--::header part start::-->
-        <header class="main_menu single_page_menu">
+        <header class="main_menu single_page_menu" style="padding-left: 15%; padding-right: 15%;">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12">
@@ -187,8 +187,8 @@
         <!--::about_us part end::-->
 
         <!--::footer_part start::-->
-        <footer class="footer_part"  style="padding-left: 15%; padding-right: 15%;">
-            <div class="footer_top">
+        <footer class="footer_part">
+            <div class="footer_top" style="padding-left: 15%; padding-right: 15%;">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6 col-lg-3">
@@ -243,7 +243,7 @@
                     </div>
                 </div>
             </div>
-            <div class="copygight_text">
+            <div class="copygight_text" style="padding-left: 5%; padding-right: 5%;">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-8">
