major updates to all pages

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 <body>
   <div class="body_bg">
   <!--::header part start::-->
-  <header class="main_menu single_page_menu">
+  <header class="main_menu single_page_menu" style="padding-left: 15%; padding-right: 15%;">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-12">
@@ -107,8 +107,8 @@
   </section>
   <!-- breadcrumb start-->
 
-  <!-- ================ contact section start ================= -->
-  <section class="contact-section section_padding">
+  <!-- ================ About us section start ================= -->
+  <section class="contact-section section_padding" style="padding-left: 15%; padding-right: 15%;">
     <div class="container">
       <div class="d-none d-sm-block mb-5 pb-4">
         <h2 style="text-align: center;">Designed by a Gamer, For Everyone</h2>
@@ -119,11 +119,11 @@
       </div>
     </div>
     </section>
-  <!-- ================ contact section end ================= -->
+  <!-- ================ About us section end ================= -->
 
   <!--::footer_part start::-->
 <footer class="footer_part">
-            <div class="footer_top">
+            <div class="footer_top" style="padding-left: 15%; padding-right: 15%;">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6 col-lg-3">
@@ -178,7 +178,7 @@
                     </div>
                 </div>
             </div>
-            <div class="copygight_text">
+            <div class="copygight_text" style="padding-left: 5%; padding-right: 5%;">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-8">
