--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
 
 <body>
     <!--::header part start::-->
-                    <header class="main_menu single_page_menu">
+        <header class="main_menu single_page_menu" style="padding-left: 15%; padding-right: 15%;">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12">
@@ -84,7 +84,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <a href="#" class="btn_1 d-none d-sm-block">Install Now</a>
+                            <a href="#" class="btn_1 d-none d-sm-block">Play Now</a>
                         </nav>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
     <!-- breadcrumb start-->
 
     <!--================Blog Area =================-->
-    <section class="blog_area section_padding">
+    <section class="blog_area section_padding" style="padding-left: 15%; padding-right: 15%;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mb-5 mb-lg-0">
@@ -440,7 +440,7 @@
 
     <!--::footer_part start::-->
   <footer class="footer_part">
-            <div class="footer_top">
+            <div class="footer_top" style="padding-left: 15%; padding-right: 15%;">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6 col-lg-3">
@@ -495,7 +495,7 @@
                     </div>
                 </div>
             </div>
-            <div class="copygight_text">
+            <div class="copygight_text" style="padding-left: 5%; padding-right: 5%;">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-8">
