--- a/fighter.html
+++ b/fighter.html
@@ -269,8 +269,8 @@
         <!-- use sasu part end-->
 
         <!--::footer_part start::-->
-                <footer class="footer_part"  style="padding-left: 15%; padding-right: 15%;">
-            <div class="footer_top">
+        <footer class="footer_part">
+            <div class="footer_top" style="padding-left: 15%; padding-right: 15%;">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6 col-lg-3">
@@ -325,7 +325,7 @@
                     </div>
                 </div>
             </div>
-            <div class="copygight_text">
+            <div class="copygight_text" style="padding-left: 5%; padding-right: 5%;">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-8">
