--- a/refundpolicy.html
+++ b/refundpolicy.html
@@ -46,7 +46,7 @@
 <body>
   <div class="body_bg">
   <!--::header part start::-->
-  <header class="main_menu single_page_menu">
+  <header class="main_menu single_page_menu" style="padding-left: 15%; padding-right: 15%;">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-12">
@@ -83,7 +83,7 @@
                 </li>
               </ul>
             </div>
-            <a href="#" class="btn_1 d-none d-sm-block">Install Now</a>
+            <a href="#" class="btn_1 d-none d-sm-block">Play Now</a>
           </nav>
         </div>
       </div>
@@ -107,10 +107,10 @@
   </section>
   <!-- breadcrumb start-->
 
-  <!-- ================ contact section start ================= -->
+  <!-- ================ Refund section start ================= -->
   <section class="contact-section section_padding">
     <div class="container">
-      <div class="d-none d-sm-block mb-5 pb-4">
+      <div class="d-none d-sm-block mb-5 pb-4" style="padding-left: 15%; padding-right: 15%;">
         <h2>Returns</h2>
         <br>
         <h3>What’s your return policy?</h3>
@@ -146,7 +146,7 @@
 
   <!--::footer_part start::-->
 <footer class="footer_part">
-            <div class="footer_top">
+            <div class="footer_top" style="padding-left: 15%; padding-right: 15%;">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6 col-lg-3">
@@ -201,7 +201,7 @@
                     </div>
                 </div>
             </div>
-            <div class="copygight_text">
+            <div class="copygight_text" style="padding-left: 5%; padding-right: 5%;">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-8">
