--- a/team.html
+++ b/team.html
@@ -85,7 +85,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <a href="#" class="btn_1 d-none d-sm-block">Install Now</a>
+                            <a href="#" class="btn_1 d-none d-sm-block">Play Now</a>
                         </nav>
                     </div>
                 </div>
