--- a/terms&conditions.html
+++ b/terms&conditions.html
@@ -46,12 +46,12 @@
 <body>
   <div class="body_bg">
   <!--::header part start::-->
-  <header class="main_menu single_page_menu">
+  <header class="main_menu single_page_menu" style="padding-left: 15%; padding-right: 15%;">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="index.html"> <img src="pictures/munno word.png" alt="logo"> </a>
+            <a class="navbar-brand" href="index.html" style="width: 20%;"> <img src="pictures/munno word.png" alt="logo"> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="menu_icon"><i class="fas fa-bars"></i></span>
@@ -83,7 +83,7 @@
                 </li>
               </ul>
             </div>
-            <a href="#" class="btn_1 d-none d-sm-block">Install Now</a>
+            <a href="#" class="btn_1 d-none d-sm-block">Play Now</a>
           </nav>
         </div>
       </div>
@@ -107,10 +107,10 @@
   </section>
   <!-- breadcrumb start-->
 
-  <!-- ================ contact section start ================= -->
+  <!-- ================  terms & condition section start ================= -->
   <section class="contact-section section_padding">
     <div class="container">
-      <div class="d-none d-sm-block mb-5 pb-4">
+      <div class="d-none d-sm-block mb-5 pb-4" style="padding-left: 15%; padding-right: 15%;">
       <p>By downloading, using the app, or website, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using any digital works from MUNNUO. You’re not allowed to copy or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages or make derivative versions. The app itself, and all the trademarks, copyright, database rights, and other intellectual property rights related to it, still belong to MUNNUO.
 
         MUNNUO is committed to ensuring that the app, website, and all digital work is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.
@@ -160,11 +160,11 @@
       </div>
     </div>
     </section>
-  <!-- ================ contact section end ================= -->
+  <!-- ================ terms & conditions section end ================= -->
 
   <!--::footer_part start::-->
 <footer class="footer_part">
-            <div class="footer_top">
+            <div class="footer_top" style="padding-left: 15%; padding-right: 15%;">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6 col-lg-3">
@@ -219,7 +219,7 @@
                     </div>
                 </div>
             </div>
-            <div class="copygight_text">
+            <div class="copygight_text" style="padding-left: 5%; padding-right: 5%;">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-8">
