updating a few meta tags

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 
 <head>
   <!-- Required meta tags -->
+  <meta name="description" content="MUNNUO Games Studio is a diverse studio that includes diversity. Developing many game titles such as Moji Karts and Shape Catcher you can expect great quality games!">  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Munnuo Games</title>
