--- a/refundpolicy.html
+++ b/refundpolicy.html
@@ -3,6 +3,7 @@
 
 <head>
   <!-- Required meta tags -->
+   <meta name="description" content="MUNNUO Games Studio refund policy states that refunds can be issued to those who have purchased any software">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Munnuo Games</title>
