updated made to homepage and games page

--- a/fighter.html
+++ b/fighter.html
@@ -142,8 +142,8 @@
             </div>
         </section>
         <!--::client logo part end::-->
-
-        <!-- gallery_part part start-->
+<!--
+        !-- gallery_part part start--
         <section class="gallery_part section_padding">
             <div class="container">
                 <div class="row justify-content-center">
@@ -239,9 +239,9 @@
                 </div>
             </div>
         </section>
-        <!-- gallery_part part end-->
-
-        <!-- use sasu part end-->
+        !-- gallery_part part end--
+    
+        !-- use sasu part end--
         <section class="upcomming_war">
             <div class="container">
                 <div class="row justify-content-center">
@@ -266,8 +266,8 @@
                 </div>
             </div>
         </section>
-        <!-- use sasu part end-->
-
+        !-- use sasu part end--
+    -->
         <!--::footer_part start::-->
         <footer class="footer_part">
             <div class="footer_top" style="padding-left: 15%; padding-right: 15%;">
