--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <!-- banner part start-->
         <section class="banner_part">
-            <div class="container" style="padding-left: 10%;">
+            <div class="container" style="padding-left: 10%; padding-right: 10%;">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-lg-6 col-md-8">
                         <div class="banner_text">
@@ -106,9 +106,8 @@
                                     the neighborhood and help solve challenges in the town!
                                     Accompanied by his best friend Delora </p>
                                 <!--<a href="#" class="btn_1">Watch Trailer</a> -->
-                                <br>
                                 <div>
-                                    <iframe src="https://www.youtube.com/embed/79-2d2J89fg?si=KDjQ3no77aa7zhhh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                    <iframe width="1920" height="1080" style="width: 50%; height: 15%;" src="https://www.youtube.com/embed/79-2d2J89fg?si=KDjQ3no77aa7zhhh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
@@ -210,11 +209,11 @@
                     <div class="col-lg-8">
                         <div class="section_tittle text-center">
                             <h2>Learn more about the Universe of Moji</h2>
+                        </div>
+                        <div class="row justify-content-center align-items-center h-100">
                             <p>There are three games that take place in the universe of Moji;
                                 Moji Karts (a mobile kart racing game), Moji World, and Da Streetz.
                             </p>
-                        </div>
-                        <div class="row justify-content-center align-items-center h-100">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/NEBiz00GGeY?si=q3UUnlYHm5E90TI-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
                     </div>
