added a description to each page, using head tags

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -3,6 +3,7 @@
 
 <head>
   <!-- Required meta tags -->
+  <meta name="description" content="MUNNUO Games Studio privacy policy can be found here. Learn more about using any games, apps, or softwares from Munnuo">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Munnuo Games</title>
