--- a/team.html
+++ b/team.html
@@ -3,6 +3,7 @@
 
 <head>
     <!-- Required meta tags -->
+    <meta name="description" content="MUNNUO Games Studio is a Team of artists and engineers. Learn more about the team developing Munnuo here.">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Munnuo Games</title>
