--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,7 @@
 
 <head>
     <!-- Required meta tags -->
+    <meta name="description" content="MUNNUO Games Studio newsletter can be found here. Keep up with all the latest news about Munnuo and projects"> 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Munnuo Games</title>
