--- a/terms&conditions.html
+++ b/terms&conditions.html
@@ -3,6 +3,7 @@
 
 <head>
   <!-- Required meta tags -->
+  <meta name="description" content="MUNNUO Games Studio terms of use can be found here. Learn what conditions applies to you if using Munnuo apps">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Munnuo Games</title>
