updated webpages, removed phone number from pages

--- a/team.html
+++ b/team.html
@@ -162,7 +162,7 @@
                             <div class="single_footer_part">
                                 <h4>Contact</h4>
                                 <p>Email : contact@munnuo.com</p>
-                                <p>Phone : 312-722-0338</p>
+                               <!---- <p>Phone : 312-722-0338</p> -->
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-3">
