--- a/team.html
+++ b/team.html
@@ -104,41 +104,39 @@
         <!--::client logo part end::-->
 
         <!-- use sasu part end-->
-        <section class="Latest_War padding_top" style="padding-left: 15%; padding-right: 15%;">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <div class="section_tittle text-center">
-                            <h2>Chuck</h2>
-                            <h3>Lead Developer | Software Engineer</h3>
+        <section style="padding-left: 10%; padding-right: 10%;">
+            <div>
+                <ul>
+                    <li>
+                        <div>
+                            <div>
+                                <div class="team">
+                                    <h2>Chuck</h2>
+                                    <h3>Lead Developer | Software Engineer</h3>
+                                </div>
+                                <div class="team">
+                                    <img src="pictures/Chuck (Animated).png">
+                                    <p style="margin-left: 25%; margin-right: 25%;">
+                                        Raised in Chicago, Illinois Chuck is very creative, passionate game developer who came up
+                                         with the company's name, "Munnuo". He leads the team with pride.
+                                    </p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-lg-12">
-                        <div class="Latest_War_text">
+                    </li>
+                    <li>
+                        <div class="team">
+                            <div class="section_tittle text-center">
+                                <h2>JuJu Beatz</h2>
+                                <h3>Audio Engineer | Music Producer</h3>
+                            </div>
+                        </div>
 
-                        </div>
-                    </div>
-                </div>
+                    </li>
+                </ul>
+                
             </div>
-                        <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <div class="section_tittle text-center">
-                            <h2>JuJu Beatz</h2>
-                            <h3>Audio Engineer | Music Producer</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-lg-12">
-                        <div class="Latest_War_text">
-
-                        </div>
-                    </div>
-                </div>
-            </div>
+                  
         </section>
         <!-- use sasu part end-->
 
