--- a/contact.html
+++ b/contact.html
@@ -142,29 +142,6 @@
             </div>
           </form>
         </div>
-        <div class="col-lg-4">
-          <div class="media contact-info">
-            <span class="contact-info__icon"><i class="ti-home"></i></span>
-            <div class="media-body">
-              <h3>Chicago, Illinois</h3>
-              <p>Chicago, IL 60653</p>
-            </div>
-          </div> <!----
-          <div class="media contact-info">
-            <span class="contact-info__icon"><i class="ti-tablet"></i></span>
-            <div class="media-body">
-              <h3>312 722 0338</h3>
-              <p>Mon to Fri 9am to 6pm</p>
-            </div>
-          </div> -->
-          <div class="media contact-info">
-            <span class="contact-info__icon"><i class="ti-email"></i></span>
-            <div class="media-body">
-              <h3>contact@munnuo.com</h3>
-              <p>Send us your query anytime!</p>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </section>
@@ -177,16 +154,14 @@
                     <div class="row">
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
-                                <a href="index.html" class="footer_logo_iner"> <img src="pictures/munno word.png" alt="#"> </a>
-                                <p>Where games comes to life! Keep creating!
+                                <a href="index.html" class="footer_logo_iner" style="align-items: center; padding-top: 10%; padding-bottom: 10%; "> <img src="pictures/munno word.png" alt="#"> </a>
+                                <h4 style="text-align: center;">Where games comes to life!
+                                </h4>
+                                <p>
+                                    ©MUNNUO. All Rights Reserved. MUNNUO and the MUNNUO logo are registered trademarks of MUNNUO, LLC. 
+                                    MUNNUO is registered in the U.S. Patent and Trademark Office. 
+                                    All other trademarks, logos and copyrights are property of their respective owners.
                                 </p>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-lg-3">
-                            <div class="single_footer_part">
-                                <h4>Contact</h4>
-                                <p>Email : contact@munnuo.com</p>
-                               <!---- <p>Phone : 312-722-0338</p> -->
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-3">
