--- a/team.html
+++ b/team.html
@@ -151,16 +151,14 @@
                     <div class="row">
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
-                                <a href="index.html" class="footer_logo_iner"> <img src="pictures/munno word.png" alt="#"> </a>
-                                <p>Where games comes to life! Keep creating!
+                                <a href="index.html" class="footer_logo_iner" style="align-items: center; padding-top: 10%; padding-bottom: 10%; "> <img src="pictures/munno word.png" alt="#"> </a>
+                                <h4 style="text-align: center;">Where games comes to life!
+                                </h4>
+                                <p>
+                                    ©MUNNUO. All Rights Reserved. MUNNUO and the MUNNUO logo are registered trademarks of MUNNUO, LLC. 
+                                    MUNNUO is registered in the U.S. Patent and Trademark Office. 
+                                    All other trademarks, logos and copyrights are property of their respective owners.
                                 </p>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-lg-3">
-                            <div class="single_footer_part">
-                                <h4>Contact</h4>
-                                <p>Email : contact@munnuo.com</p>
-                               <!---- <p>Phone : 312-722-0338</p> -->
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-3">
