--- a/games.html
+++ b/games.html
@@ -116,12 +116,12 @@
                     </a>
                 </div>
                 <div class="gallery">
-                    <a target="_self" href="img_large.jpg">
-                    <img src="pictures/moji_world_poster_art.png" alt="Image">
+                    <a target="_self" href="moji_world.html">
+                    <img src="pictures/moji_world_poster_art_super.png" alt="Image">
                     </a>
                 </div>
                 <div class="gallery">
-                    <a target="_self" href="img_large.jpg">
+                    <a target="_self" href="#">
                     <img src="pictures/moji_mobile_poster_art.png" alt="Image">
                     </a>
                 </div>
