--- a/forum.html
+++ b/forum.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Game Forum | Da Streetz</title>
+  <title>Game Forum | Munnuo Games Studio</title>
   <style>
     * {
       box-sizing: border-box;
@@ -89,7 +89,7 @@
 </head>
 <body>
   <header>
-    <div class="logo"><img src="logo.png" alt="Da Streetz"></div>
+    <div class="logo"><img src="pictures/munno word.png" alt="Da Streetz"></div>
     <nav>
       <a href="index.html">Home</a>
       <a href="#">Forum</a>
